add shim folder and modify pom file - step3
Signed-off-by: Ahmed Hussein (amahussein) <a@ahussein.me>

--- a/pom.xml
+++ b/pom.xml
@@ -843,17 +843,14 @@
                                 <configuration>
                                     <sources>
                                         <source>${project.basedir}/src/main/330db/scala</source>
-                                        <source>${project.basedir}/src/main/311until330-all/scala</source>
-                                        <source>${project.basedir}/src/main/311until340-all/scala</source>
                                         <source>${project.basedir}/src/main/311+-db/scala</source>
-                                        <source>${project.basedir}/src/main/320+/java</source>
                                         <source>${project.basedir}/src/main/320+/scala</source>
+                                        <source>${project.basedir}/src/main/311until340-all/scala</source>
                                         <source>${project.basedir}/src/main/320+-noncdh/scala</source>
-                                        <source>${project.basedir}/src/main/320until330-all/scala</source>
-                                        <source>${project.basedir}/src/main/320until330-noncdh/scala</source>
                                         <source>${project.basedir}/src/main/320until340-all/scala</source>
                                         <source>${project.basedir}/src/main/321+/scala</source>
-                                        <source>${project.basedir}/src/main/321until330-all/scala</source>
+                                        <source>${project.basedir}/src/main/330until340/scala</source>
+                                        <source>${project.basedir}/src/main/330+/scala</source>
                                         <source>${project.basedir}/src/main/post320-treenode/scala</source>
                                     </sources>
                                 </configuration>
