--- a/sql-plugin/pom.xml
+++ b/sql-plugin/pom.xml
@@ -651,6 +651,17 @@
                                     <include name="321db/*"/>
                                 </dirset>
                             </pathconvert>
+                            <pathconvert property="spark330db.sources" pathsep=",">
+                                <dirset dir="${project.basedir}/src/main">
+                                    <patternset id="spark330db+.pattern">
+                                        <!-- inherit 330+ except nondb -->
+                                        <patternset refid="spark330+.pattern"/>
+                                        <exclude name="*nondb*/*"/>
+
+                                    </patternset>
+                                    <include name="330db/*"/>
+                                </dirset>
+                            </pathconvert>
                         </target>
                     </configuration>
                 </execution>
