--- a/sql-plugin/pom.xml
+++ b/sql-plugin/pom.xml
@@ -571,6 +571,7 @@
                                         <!-- uniquely 330+ -->
                                         <include name="330+/*"/>
                                         <include name="330+-noncdh/*"/>
+                                        <include name="330until340-nondb/*"/>
                                         <include name="330until340/*"/>
                                     </patternset>
                                     <include name="330/*"/>
