--- a/sql-plugin/pom.xml
+++ b/sql-plugin/pom.xml
@@ -659,6 +659,8 @@
                                         <!-- inherit 321+ except nondb -->
                                         <patternset refid="spark340+.pattern"/>
                                         <exclude name="*nondb*/*"/>
+
+                                        <include name="311+-db/*"/>
                                     </patternset>
                                     <include name="330db/*"/>
                                 </dirset>
