--- a/sql-plugin/pom.xml
+++ b/sql-plugin/pom.xml
@@ -572,6 +572,7 @@
                                         <!-- uniquely 330+ -->
                                         <include name="330+/*"/>
                                         <include name="330+-noncdh/*"/>
+                                        <include name="330+-nondb/*"/>
                                         <include name="330until340/*"/>
                                     </patternset>
                                     <include name="330/*"/>
